--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -14,11 +14,15 @@
             <!-- <h1 class="display-1 text-white mb-4">
               REVOLUTION
             </h1> -->
+            <div class="mx-auto" style="max-width:480px;">
             <img class="img-fluid" src="assets/img/logo.png">
+            </div>
             <!-- Subheading -->
-              <h5 class="text-center text-white-75 mt-7 mb-7 hero-text">
-                Elevating legacy wines from around the world.
-              </h5>
+            <div class="mx-auto">
+              <h3 class="text-justify mx-auto text-white-75 mt-7 mb-7 hero-text">
+                Elevating legacy wines<br />from around the world
+              </h3>
+            </div>
 
             <!-- Button -->
             <a class="btn btn-outline-primary text-white text-primary-hover mb-7 mb-md-0" href="#reservation">
