--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -25,7 +25,7 @@
             </div>
 
             <!-- Button -->
-            <a class="btn btn-outline-primary text-white text-primary-hover mb-7 mb-md-0" href="#reservation">
+            <a class="btn btn-outline-primary text-white text-primary-hover mb-7 mb-md-0" href="assets\Revolution_Full_Brochure_Final8LR.pdf">
               Our Producers
             </a>
 
