--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -15049,9 +15049,7 @@ fieldset:disabled .btn {
 /*# sourceMappingURL=theme.bundle.css.map*/
 
 .hero-text {
-  text-align: justify;
-  text-justify: auto;
-  text-align-last: justify;
+  text-align: center;
   max-width: 390px;
   letter-spacing:0.1em;
 }
