--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -24,10 +24,10 @@
               </h3>
             </div>
 
-            <!-- Button -->
+            <!-- Button
             <a class="btn btn-outline-primary text-white text-primary-hover mb-7 mb-md-0" href="assets\Revolution_Full_Brochure_Final8LR.pdf">
               Our Producers
-            </a>
+            </a>-->
 
           </div>
         </div>
